--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.2.10
 crispy-forms-materialize==0.2
+dj-database-url==0.5.0
 Django==3.1.2
 django-allauth==0.42.0
 django-countries==6.1.3
@@ -7,6 +8,7 @@ django-crispy-forms==1.9.2
 django-mysql==3.9.0
 oauthlib==3.1.0
 Pillow==7.2.0
+psycopg2-binary==2.8.6
 python3-openid==3.2.0
 pytz==2020.1
 requests-oauthlib==1.3.0
